# jaeger-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  EVALUATION.md  README.md  debug_full.txt  debug_output.txt  debug_v2.txt  debug_v3.txt  evaluation.xml  openapi.yaml  pyproject.toml  server.json
.github/workflows/: auto-release.yml  publish.yml  test.yml
.planning/: ROADMAP.md
.planning/phases/08-trace-comparison/: 08-01-PLAN.md  08-02-PLAN.md  08-03-PLAN.md
.planning/phases/09-span-statistics/: 09-01-PLAN.md  09-02-PLAN.md  09-03-PLAN.md
.planning/phases/10-release-v030/: 10-01-PLAN.md  10-01-SUMMARY.md
.planning/phases/11-async-transport/: 11-01-PLAN.md  11-02-PLAN.md  11-03-PLAN.md
.serena/: project.yml
docs/: README.md  mcp-tools-openapi.yaml
scripts/: README-autonomous.md  autonomous_workflow.py  validate-openapi.py
src/jaeger_mcp/: __init__.py  _mcp.py  client.py  errors.py  facade.py  models.py  output.py  server.py  shaping.py  tools.py  tools.py.bak
src/jaeger_mcp/predictive/: __init__.py  forecasting.py  models.py  performance_model.py  tools.py
tests/: test_client.py  test_errors.py  test_facade.py  test_logging.py  test_mcp_client_cache.py  test_output.py  test_protocol.py  test_reliability.py  test_tools_helpers.py  test_tools_integration.py
