[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "jaeger-mcp"
version = "0.5.0"
description = "MCP server for Jaeger distributed tracing — search traces, inspect spans, compare traces, compute span statistics, map service dependencies, predict performance issues, forecast capacity needs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mikhail Shchegolev" },
]
keywords = ["mcp", "jaeger", "tracing", "observability", "opentelemetry", "claude", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "pydantic>=2.0",
    "typing-extensions>=4.5; python_version < '3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.5",
    "respx>=0.22",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
    "pytest-cov>=4",
]

[project.scripts]
jaeger-mcp = "jaeger_mcp.server:main"

[project.urls]
Homepage = "https://github.com/mshegolev/jaeger-mcp"
Issues = "https://github.com/mshegolev/jaeger-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jaeger_mcp"]
include = ["openapi.yaml"]

[tool.hatch.build.targets.sdist]
include = [
    "src/jaeger_mcp/**/*",
    "openapi.yaml",
    "docs/**/*",
    "scripts/**/*",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
